fix height of desktop search input field; fix gap between header and body

--- a/www-root/style-assets/css/inner-style.css
+++ b/www-root/style-assets/css/inner-style.css
@@ -10673,7 +10673,7 @@ div#lhnContainerDone {
 }
 
 body {
-  margin-top: 70px;
+  margin-top: 68px;
   font-family: 'Gotham A', 'Gotham B', Open Sans, helvetica, arial, sans-serif;
   font-style: normal;
   font-weight: 400;
